--- a/default.css
+++ b/default.css
@@ -66,6 +66,10 @@ h6 { font-size: 16px;}
 	background-color: #000000;
 	border-bottom:1px solid var(--borderColor);
 	overflow:hidden;
+	position: relative;
+	right: 0;
+	height: 700px;
+	z-index: 2;
 }
 
 .s2{
@@ -75,14 +79,81 @@ h6 { font-size: 16px;}
 	background-size: cover;
 	border-bottom:1px solid var(--borderColor);
 	overflow:hidden;
+	position: relative;
+	right: 0;
+	z-index: 2;
 }
-
-
-
 
 .main-container{
 	width: 1200px;
 	margin: 0 auto;
+}
+header
+{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 40px 100px;
+  z-index: 1000;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.toggle
+{
+  position: relative;
+  width: 60px;
+  height: 60px;
+  margin-right: 150px;
+  background: url("images/menu.png");
+  background-repeat: no-repeat;
+  background-size: 30px;
+  background-position: center;
+  cursor: pointer;
+}
+.toggle.active
+{
+  background: url("images/close.png");
+  background-repeat: no-repeat;
+  background-size: 25px;
+  background-position: center;
+  cursor: pointer;
+}
+.s1.active
+{
+  right: 300px;
+}
+.menu
+{
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 300px;
+  height: 600px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+}
+.menu ul
+{
+  position: relative;
+}
+.menu ul li
+{
+  list-style: none;
+}
+.menu ul li a
+{
+  text-decoration: none;
+  font-size: 24px;
+  color: #111;
+}
+.menu ul li a:hover
+{
+  color: #999; 
 }
 
 .greeting-wrapper{
@@ -93,86 +164,14 @@ h6 { font-size: 16px;}
 
 }
 
-.intro-wrapper{
-	background-color: #1a1a1a;
-	border:1px solid white;
-	border-radius:5px 5px 0 0;
-	-webkit-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
-	-moz-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
-	box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
-	display: grid;
-	grid-template-columns: 1fr;
-	grid-template-areas: 
-		'nav-wrapper'
-		'right-column'
-	;
-}
-
-
-.nav-wrapper{
-	border-radius:5px 5px 0 0;
-	grid-area: nav-wrapper;
-	border-bottom: 1px solid white;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	background-color: #333333;
-}
-
-#navigation a{
-	color:var(--mainText);
-}
-
-
-#navigation{
-	margin:0;
-	padding: 10px;
-}
-
-#navigation li{
-	display: inline-block;
-	margin-right: 5px;
-	margin-left:5px;
-}
-
-.dots-wrapper{
-	display: flex;
-	padding: 10px;
-}
-
-#dot-1{
-	background-color:  #FC6058;
-}
-
-#dot-2{
-	background-color:  #FEC02F;
-}
-
-#dot-3{
-	background-color:  #2ACA3E;
-}
-
-.browser-dot{
-	background-color: black;
-	height: 15px;
-	width: 15px;
-	border-radius: 50%;
-	margin: 5px;
-
-	-webkit-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
-	-moz-box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
-	box-shadow: -1px 1px 3px -1px rgba(0,0,0,0.75);
-
-}
-
 .right-column{
 	grid-area: right-column;
 	display: grid;
 	justify-content: center;
-	align-content: center;
-	padding-top: 30px;
-	padding-bottom: 30px;
-	height: 350px;
+	
+	padding-top: 20px;
+	padding-bottom: 20px;
+	height: 380px;
 	background-color: #1a1a1a;
 }
 
@@ -269,6 +268,9 @@ h6 { font-size: 16px;}
 	}
 	.upto{
 		width: 95%;
+	}
+	.toggle{
+		margin-right: 100px;
 	}
 }
 
